careerhub/prod/web/auth-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  template:
    spec:
      containers:
        - name: auth-service
          image: "986069063944.dkr.ecr.ap-south-1.amazonaws.com/prod-auth-service-ecr:2025.05.17-08.25.06"
