careerhub/prod/web/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: careerhub-httproute
spec:
  hostnames:
    - prod-careerhub.jyo-liar.com
